--- a/Vjezbe/Kolokvij.2
+++ b/Vjezbe/Kolokvij.2
@@ -69,3 +69,51 @@ create table svekar(
     ogrlica int,
     asocijalno bit
 );
+
+
+alter table cura add foreign key (decko) references decko(sifra);
+alter table neprijatelj add foreign key (cura) references cura(sifra);
+alter table brat add foreign key (neprijatelj) references neprijatelj(sifra);
+alter table decko_zarucnica add foreign key (decko) references decko(sifra);
+alter table decko_zarucnica add foreign key (zarucnica) references zarucnica(sifra);
+alter table prijatelj add foreign key (svekar) references svekar(sifra);
+
+
+
+select * from neprijatelj;
+insert into neprijatelj (sifra,majica,haljina,lipa,modelnaocala,kuna,jmbag,cura)
+values (null,'crvena','kratka',23.00,'suncane',50.20,'12345678987',null),
+(null,'plava','duga',20.00,'suncane',5.00,'12345634987',null),
+(null,'zelena','kratka',2.00,'suncane',11.00,'55345678987',null);
+
+
+select * from prijatelj;
+update prijatelj set treciputa ='30.04.2022';
+
+select * from brat;
+delete from brat 
+where ogrlica not like '%14%';
+
+select * from cura;
+insert into cura (sifra,haljina,drugiputa,suknja,narukvica,ntrovertno,majica,decko)
+values (null,'bijela','02-02-01','svecana',1,2,'plava',null),
+(null,'plava','18-02-01','svecana',5,1,'plava',null),
+(null,'roza','21-02-01','svecana',11,3,'plava',null);
+
+select * from cura
+where drugiputa =null;
+
+select a.novcica,f.neprijatelj,e.haljina,d.drugiputa,c.vesta  
+from zarucnica a 
+inner join decko_zarucnica b on a.sifra=b.zarucnica
+inner join decko c on c.sifra=b.decko
+inner join cura d on c.sifra=d.decko 
+inner join neprijatelj e on d.sifra=e.cura 
+inner join brat f on e.sifra=f.neprijatelj 
+where c.vesta like '%b%a%.%'
+group by e.haljina 
+order by 2 desc;
+
+select a.vesta,a.asocijalno 
+from decko a
+left join decko_zarucnica b on a.sifra=b.decko;
