--- a/Vjezbe/Kolokvij.2
+++ b/Vjezbe/Kolokvij.2
@@ -116,4 +116,5 @@ order by 2 desc;
 
 select a.vesta,a.asocijalno 
 from decko a
-left join decko_zarucnica b on a.sifra=b.decko;
+left join decko_zarucnica b on a.sifra=b.decko
+where b.decko is null;
